#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-09-39
2016-11-10 David Schneider
-  update to pdsdata 8.6.18 for ControlsCameraConfig

Tag: V00-09-38
2016-10-17 David Schneider
- update to pdsdata 8.6.17 and psddldata V01-00-49 for fix to BldDataBeamMonitorV1

Tag: V00-09-37
2016-6-30 David Schneider
- update to pdsdata 8.6.16 and psddldata V01-00-48 for BldDataBeamMonitorV1 and BldUsdUsbV1
- do not implement hdf for BldUsdUsb - assume XtcConverter will split type into subtypes

Tag:V00-09-36
2016-6-13 David Schneider
- update to pdsdata 8.6.12 for Partition::ConfigV2 JIRA PSAS-241

Tag: V00-09-35
2016-6-7 David Schneider
- allow for zero dimensions in BldDataEOrbitsV0
	
Tag: V00-09-34
2016-6-2 David Schneider
- update to pdsdata 8.6.10 with BldDataEOrbitsV0 JIRA PSAS-239
  and smldata fix PSAS-237

Tag: V00-09-33
2016-4-18 David Schneider
- update to pdsdata 8.6.8 with Andor::ConfigV2 JIRA PSAS-229

Tag: V00-09-32
2016-4-14 David Schneider
- add hdf5 support for generic1d PSAS-225

Tag: V00-09-31
2016-4-14 David Schneider
- use new DDL tag method_domain to generated h5schema for ocean optics dataV3

Tag: V00-09-30
2016-4-11 David Schneider
- fix compiler warning
	
Tag: V00-09-29
2016-4-4 David Schneider
- update to pdsdata 8.6.7 but only support UsdUsb::Fex* at this time,
  no support for Generic1D yet - JIRA PSAS-225
- store/read FexConfig by hand to handle the list of strings JIRA PSAS-224

Tag: V00-09-28
2016-2-5 David Schneider
- update to pdsdata 8.6.1 with Andor3d::FrameV1 (and ConfigV1) JIRA PSAS-214

Tag: V00-09-27
2015-12-10 David Schneider